fixed css background and text color contrast

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,9 +18,9 @@ body {
   font-family: 'Ubuntu', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #000;
-  ;
-  color: #333;
+  background-color: rgb(14, 13, 13);
+
+  color: rgb(73, 73, 73);
 }
 
 a {
